# pretalx-activitylog-webhook

./: LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: style.yml
pretalx_activitylog_webhook/: apps.py  forms.py  http.py  models.py  settings.py  signals.py  tasks.py  urls.py  views.py
pretalx_activitylog_webhook/migrations/: 0001_initial.py
pretalx_activitylog_webhook/templates/pretalx_activitylog_webhook/: settings.html
